Initial Fixes and Style Modifications
Many Changes Because Initial Problem to Commit so I am putting all the current changes at once
-Shows Current Score
-Changed the Layout of the game window
-Fixed the Game Over triggering only mid-way through the game and not the end
-Changed the Game Over Style
-Changed the Background to a Solid Black Color

--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -20,6 +20,8 @@
             <GameOverPanel fx:id="gameOverPanel"/>
         </VBox>
     </Group>
+    <Label text="Current Score" styleClass="nextBrickLabel" layoutX="205" layoutY="0"/>
+    <Label fx:id="scoreLabel" text="0" styleClass="scoreClass" layoutX="225" layoutY="25"/>
     <stylesheets>
         <URL value="@window_style.css"/>
     </stylesheets>
