--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -1,4 +1,5 @@
 <?import com.comp2042.GameOverPanel?>
+<?import com.comp2042.MainMenuPanel?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
@@ -20,7 +21,10 @@
             <GameOverPanel fx:id="gameOverPanel"/>
         </VBox>
     </Group>
-    <Label text="Current Score" styleClass="nextBrickLabel" layoutX="225" layoutY="0"/>
+    
+    <MainMenuPanel fx:id="mainMenuPanel" prefWidth="450" prefHeight="620"/>
+    
+    <Label fx:id="currentScoreLabel" text="Current Score" styleClass="nextBrickLabel" layoutX="225" layoutY="0"/>
     <Label fx:id="scoreLabel" text="0" styleClass="scoreClass" layoutX="225" layoutY="32"/>
     <stylesheets>
         <URL value="@window_style.css"/>
