--- a/src/main/resources/window_style.css
+++ b/src/main/resources/window_style.css
@@ -108,7 +108,7 @@
     -fx-font-size: 60px;
     -fx-font-weight: bold;
     -fx-text-fill: #00ff00;
-    -fx-effect: dropshadow(gaussian, #00ff00, 20, 0.9, 0, 0);
+    -fx-effect: dropshadow(gaussian, #00ff00, 7, 0.9, 0, 0);
 }
 
 .menuButton {
@@ -150,6 +150,12 @@
 }
 
 .mainMenuPanel {
+    -fx-background-image: url("background_image.png");
+    -fx-background-size: cover;
+    -fx-background-position: center;
+}
+
+.gameOverBackground {
     -fx-background-image: url("background_image.png");
     -fx-background-size: cover;
     -fx-background-position: center;
