--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -1,5 +1,6 @@
 <?import com.comp2042.GameOverPanel?>
 <?import com.comp2042.MainMenuPanel?>
+<?import com.comp2042.PausePanel?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
@@ -17,7 +18,11 @@
         </center>
     </BorderPane>
 
+    <Group fx:id="groupNotification" layoutX="30" layoutY="203"/>
+
     <GameOverPanel fx:id="gameOverPanel" prefWidth="450" prefHeight="620" visible="false"/>
+    
+    <PausePanel fx:id="pausePanel" prefWidth="450" prefHeight="620" visible="false"/>
     
     <MainMenuPanel fx:id="mainMenuPanel" prefWidth="450" prefHeight="620"/>
     
