--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -1,6 +1,7 @@
 <?import com.comp2042.GameOverPanel?>
 <?import com.comp2042.MainMenuPanel?>
 <?import com.comp2042.PausePanel?>
+<?import com.comp2042.LevelsPanel?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
@@ -24,6 +25,8 @@
     
     <PausePanel fx:id="pausePanel" prefWidth="450" prefHeight="620" visible="false"/>
     
+    <LevelsPanel fx:id="levelsPanel" prefWidth="450" prefHeight="620" visible="false"/>
+    
     <MainMenuPanel fx:id="mainMenuPanel" prefWidth="450" prefHeight="620"/>
     
     <Label fx:id="currentScoreLabel" text="Current Score" styleClass="nextBrickLabel" layoutX="225" layoutY="0"/>
@@ -36,6 +39,14 @@
         </top>
         <center>
             <GridPane fx:id="nextBrickPanel" hgap="1" vgap="1" alignment="CENTER"/>
+        </center>
+    </BorderPane>
+    <BorderPane fx:id="holdBrickContainer" styleClass="nextBrick" layoutX="300" layoutY="260" prefWidth="100" prefHeight="100">
+        <top>
+            <Label text="Hold" styleClass="nextBrickLabel" alignment="CENTER"/>
+        </top>
+        <center>
+            <GridPane fx:id="holdBrickPanel" hgap="1" vgap="1" alignment="CENTER"/>
         </center>
     </BorderPane>
     <stylesheets>
