--- a/src/main/resources/gameLayout.fxml
+++ b/src/main/resources/gameLayout.fxml
@@ -1,7 +1,7 @@
-<?import com.comp2042.GameOverPanel?>
-<?import com.comp2042.MainMenuPanel?>
-<?import com.comp2042.PausePanel?>
-<?import com.comp2042.LevelsPanel?>
+<?import com.comp2042.ui.panel.GameOverPanel?>
+<?import com.comp2042.ui.panel.MainMenuPanel?>
+<?import com.comp2042.ui.panel.PausePanel?>
+<?import com.comp2042.ui.panel.LevelsPanel?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
